# TermAid

./: .gitignore  .termaid_aliases.json  .termaid_history.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPP_BUILD.md  FINAL_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  ReadMe.md  SUMMARY.md  build.sh  demo.sh  install.sh  main.cpp  termaid.py  termaid_wrapper.sh  test_termaid.sh
commands/archive/: compression.json
commands/containers/: docker.json  kubernetes.json
commands/disk_management/: disk.json
commands/file_operations/: advanced.json  basic.json  editors.json
commands/network/: firewall.json  network.json
commands/package_management/: apt.json
commands/permissions/: permissions.json
commands/process_management/: processes.json
commands/scheduling/: cron.json
commands/search/: find.json
commands/system_info/: environment.json  monitoring.json  system.json  users.json
commands/terminal/: multiplexers.json
commands/text_processing/: text.json
commands/version_control/: git.json
src/: termaid.cpp
